ADD - Documentation. FIX - Stream to list in Java 8